tests/fixtures/prisma/syntax-error/prisma/schema.prisma
datasource db { provider = "postgresql" url = env("DATABASE_URL") }

model Broken {
  id Int @id
}
